--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.daggerapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mealcategory.view.MainActivity">
+        <activity android:name=".perfeature.mealbycategory.view.activity.MealByCategoryActivity"></activity>
+        <activity android:name=".perfeature.mealcategory.view.activity.MealCategoryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
